<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"

    >

    <group android:checkableBehavior="single"
        android:id="@+id/group_drawer">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home2"
            android:icon="@drawable/house_01"

            />
        <item
            android:id="@+id/nav_1"
            android:title="@string/menu_7"
            android:icon="@drawable/e_waste_icon"

            />
        <item
            android:id="@+id/nav_2"
            android:title="@string/menu_1"
            android:icon="@drawable/data_icon"

            />
        <item
            android:id="@+id/nav_3"
            android:title="@string/menu_2"
            android:icon="@drawable/reuse_icon"
            />
        <item
            android:id="@+id/nav_4"
            android:title="@string/menu_3"
            android:icon="@drawable/recycling_icon"
            />
        <item
            android:id="@+id/nav_5"
            android:title="@string/menu_5"
            android:icon="@drawable/tips_icon"
            />
        <item
            android:id="@+id/nav_6"
            android:title="@string/menu_6"
            android:icon="@drawable/find_icon"
            />
        <item
            android:id="@+id/nav_7"
            android:title="@string/menu_8"
            android:icon="@drawable/setting_svgrepo_com"
            />
        <item
            android:id="@+id/nav_8"
            android:title="@string/menu_9"
            android:icon="@drawable/rate_us_svgrepo_com"
            />
        <item
            android:id="@+id/nav_9"
            android:title="@string/menu_10"
            android:icon="@drawable/feedback_svgrepo_com"
            />
        <item
            android:id="@+id/nav_10"
            android:title="@string/menu_11"
            android:icon="@drawable/share_nodes_svgrepo_com"
            />




    </group>
</menu>