<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orderInCategory="100"
        android:title="@string/action_setting"

        app:showAsAction="never" />
    <item
        android:id="@+id/action_rateus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orderInCategory="100"
        android:title="@string/action_rateus"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orderInCategory="100"
        android:title="@string/action_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never" />
</menu>