<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/predictprice"
    android:orientation="vertical"
    android:background="@drawable/fragmentroundbackground_bn"
    tools:context=".ui.PredictPrice.predictprice">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@id/predictbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:orientation="vertical">

            <!--    bottom navigation view-->

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:backgroundTint="#5ABA45"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_gravity="top"
                app:layout_constraintBottom_toTopOf="@+id/predictbtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:alpha="0.99"
                    android:backgroundTint="#5ABA45"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.345">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:text="@string/h_f_ecd"
                                android:textColor="#140B0B"
                                android:textSize="30sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_marginTop="10dp"
                                android:text="@string/Product_type"
                                android:textColor="#140B0B"
                                android:textSize="25sp" />

                            <Spinner
                                android:id="@+id/producttype_spinner"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/roundedbox_background"

                                android:spinnerMode="dropdown" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_marginTop="10dp"
                                android:text="@string/Brand"
                                android:textColor="#140B0B"
                                android:textSize="25sp" />

                            <Spinner
                                android:id="@+id/brandtype_spinner"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/roundedbox_background"
                                android:spinnerMode="dropdown" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_marginTop="10dp"
                                android:text="@string/modeln"
                                android:textColor="#140B0B"
                                android:textSize="25sp" />
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/roundedbox_background"
                                android:hint="enter"
                                android:id="@+id/modelid"
                                android:textColor="#000"
                                android:textColorHint="#EBE2E2"
                                android:maxEms="5" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_marginTop="10dp"
                                android:text="@string/User_Lifespan"
                                android:textColor="#140B0B"
                                android:textSize="25sp" />

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/roundedbox_background"
                                android:hint="2 Year"
                                android:textColor="#000"
                                android:textColorHint="#EBE2E2"
                                android:maxEms="5" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_marginTop="10dp"
                                android:text="Expiry Years"
                                android:textColor="#140B0B"
                                android:textSize="25sp" />

                            <EditText
                                android:id="@+id/expiryyear"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/roundedbox_background"
                                android:hint="enter"
                                android:textColor="#000"
                                android:textColorHint="#EBE2E2"
                                android:inputType="numberDecimal"
                                android:maxEms="5" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_marginTop="10dp"
                                android:text="Condition"
                                android:textColor="#140B0B"
                                android:textSize="25sp" />

                            <EditText
                                android:id="@+id/condition"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/roundedbox_background"
                                android:hint="enter"
                                android:textColor="#000"
                                android:textColorHint="#EBE2E2"
                                android:inputType="textShortMessage"
                                android:maxEms="20" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_marginTop="10dp"
                                android:text="Original Price"
                                android:textColor="#140B0B"
                                android:textSize="25sp" />

                            <EditText
                                android:id="@+id/originalprice"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/roundedbox_background"
                                android:hint="10000"
                                android:textColor="#000"
                                android:textColorHint="#EBE2E2"
                                android:inputType="numberDecimal"
                                android:maxEms="10" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_marginTop="10dp"
                                android:text="Used Duration"
                                android:textColor="#140B0B"
                                android:textSize="25sp" />

                            <EditText
                                android:id="@+id/usedduration"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/roundedbox_background"
                                android:hint="1"
                                android:textColor="#000"
                                android:textColorHint="#EBE2E2"
                                android:inputType="numberDecimal"
                                android:maxEms="3" />
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:id="@+id/selectimgll"
                                android:orientation="vertical"
                                android:layout_gravity="center_horizontal"
                                android:layout_height="wrap_content">
                                <ImageView
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:src="@drawable/selectimg"
                                    android:clickable="true"
                                    android:id="@+id/selectimg"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Click to Choose\n       image"
                                    android:id="@+id/chooseimg"
                                    android:textColor="#000"/>

                            </LinearLayout>


                            <!--        <EditText-->
                            <!--            android:layout_width="match_parent"-->
                            <!--            android:layout_height="wrap_content"-->
                            <!--            android:layout_marginLeft="4dp"-->
                            <!--            android:layout_marginTop="10dp"-->
                            <!--            android:layout_marginRight="4dp"-->
                            <!--            android:background="#fff"-->
                            <!--            android:maxEms="20"-->
                            <!--            android:shadowColor="#50BD2A"-->
                            <!--            android:textSize="25sp" />-->
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <!--            <androidx.appcompat.widget.AppCompatButton-->
            <!--                android:id="@+id/predictbtn"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center_horizontal"-->
            <!--                android:layout_marginTop="10dp"-->
            <!--                android:layout_marginBottom="15dp"-->
            <!--                android:background="@drawable/roundedbox_background"-->
            <!--                android:backgroundTint="#0B890C"-->
            <!--                android:text="@string/h_f_pp"-->
            <!--                android:textSize="30sp" />-->

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/predictbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/roundedbox_background"
        android:backgroundTint="#0B890C"
        android:text="@string/h_f_pp"
        android:textSize="30sp"
        app:layout_constraintVertical_weight="1"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/home_bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</LinearLayout>